test.txt

C:\Programming\c++\omniscia>cmake --build build 
[1/2] Building CXX object CMakeFiles/Omniscia.dir/src/ecs/ecs_physics_positioned.cpp.obj
FAILED: CMakeFiles/Omniscia.dir/src/ecs/ecs_physics_positioned.cpp.obj 
C:\PROGRA~1\LLVM\bin\CLANG_~1.EXE  -IC:/Programming/c++/omniscia/src -IC:/Programming/c++/omniscia/src/ecs -IC:/Programming/c++/omniscia/src/gfx -IC:/Programming/c++/omniscia/src/imgui -IC:/Programming/c++/omniscia/src/asset -IC:/Programming/c++/omniscia/3dparty/stb -IC:/Programming/c++/omniscia/3dparty/imgui -IC:/Programming/c++/omniscia/3dparty/imgui/backends -IC:/Programming/c++/omniscia/3dparty/glfw/include -IC:/Programming/c++/omniscia/3dparty/glad/include -std=c++20 -g -Xclang -gcodeview -O0 -D_DEBUG -D_DLL -D_MT -Xclang --dependent-lib=msvcrtd -std=gnu++20 -MD -MT CMakeFiles/Omniscia.dir/src/ecs/ecs_physics_positioned.cpp.obj -MF CMakeFiles\Omniscia.dir\src\ecs\ecs_physics_positioned.cpp.obj.d -o CMakeFiles/Omniscia.dir/src/ecs/ecs_physics_positioned.cpp.obj -c C:/Programming/c++/omniscia/src/ecs/ecs_physics_positioned.cpp
In file included from C:/Programming/c++/omniscia/src/ecs/ecs_physics_positioned.cpp:1:
In file included from C:/Programming/c++/omniscia/src/ecs/ecs_physics_positioned.h:14:
C:/Programming/c++/omniscia/src/ecs/ecs_movable_aabb_collider.h:14:23: error: unknown type name 'ECS_PhysicsPositioned'; did you mean 'ECS_Positioned'?
            ECS_Index<ECS_PhysicsPositioned> _physicsPositioned;
                      ^~~~~~~~~~~~~~~~~~~~~
                      ECS_Positioned
C:/Programming/c++/omniscia/src/ecs/ecs_positioned.h:13:11: note: 'ECS_Positioned' declared here
    class ECS_Positioned : public ECS_Component {
          ^
1 error generated.
ninja: build stopped: subcommand failed.

C:\Programming\c++\omniscia>build\Omniscia.exe
